# c-starter

./: .gitignore  README.md
src/: CMakeLists.txt  main.c
src/include/: version.h.in
